<resources>
    <string name="app_name">Re:Coded</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Email">Email</string>
    <string name="UserName">User Name</string>
    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="Birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="Update">Update</string>

    <string-array name="sign_up_choose_bootcamp_spinner">
        <item>Şanlıurfa</item>
        <item>İstanbul</item>
        <item>Iraq</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
