<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <ImageView
                android:id="@+id/cover_picture_image_view"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:src="@drawable/kubra_background" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="135dp"
                android:layout_marginRight="135dp"
                android:layout_marginTop="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/kubra"
                app:civ_border_width="1dp">
            </de.hdodenhof.circleimageview.CircleImageView>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cover_picture_image_view" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_layout"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/Email"
                android:textColor="#616161" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="#616161" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/UserName"
                android:textColor="#616161" />
            <EditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="#616161" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textColor="#616161" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/phone_number_edit_text"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="#616161" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/Gender"
                android:textColor="#616161" />
            <RadioGroup
                android:id="@+id/genedr_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#616161"
                    android:text="@string/male"
                    android:textColor="#616161" />
                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#616161"
                    android:text="@string/Female"
                    android:textColor="#616161" />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/Birthday"
                android:textColor="#616161" />
            <EditText
                android:id="@+id/birthday_edit_text"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="#616161" />
            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="40dp"
                android:background="#ffba00"
                android:text="@string/Update"
                android:textColor="#242424" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>



